--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yami.CO</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="logo"><img src="assets/mymymymy.png" alt=""></div>
+        <h1 class="nama-perusahaan"><span>Yami</span> Corporation</h1>
+        <ul>
+            <li><a href="" class="info"><span>HOME</span></a></li>
+            <li><a href="" class="info">About</a></li>
+            <li><a href="" class="info">Contact</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
