--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
             <li><a href="" class="info">Contact</a></li>
         </ul>
     </nav>
+    <main>
+        <div class="dekstop1">
+            <div class="deskdesktop"><h1 class="deskperusahaan">
+We are [<span class="redspanshadow">YAMI </span><span class="spanwhite">CORPORATION</span>], a creative startup specializing in modern game development. Driven by innovation and collaboration <br> we focus on delivering fun, immersive, and meaningful gaming experiences for every player. <br>
+Our team consists of young developers, creative designers, and storytellers who believe that games are not just entertainment, but<br> also a medium for learning, expression, and community building. <br>
+We develop games in various genres, from adventure and education to simulation, combining the latest technology with compelling <br>stories.
+Our vision is to be a game development company that positively impacts both entertainment and education, while also being able to compete in the global market.</h1>
+        </div>
+        </div>
+    </main>
 </body>
 </html>
