--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@ We develop games in various genres, from adventure and education to simulation, 
 Our vision is to be a game development company that positively impacts both entertainment and education, while also being able to compete in the global market.</h1>
         </div>
         </div>
+        <div class="desktop2">
+            <h1 class="game-list">GAME LIST</h1>
+            <div class="game"><a href=""><img src="assets/adventure.png" alt="" class="gamesize" id="adventure"></a></div>
+            <div class="game"><a href=""><img src="assets/zombie.png" alt="" class="gamesize" id="zombie"></a></div>
+            <div class="game"><a href=""><img src="assets/otome.png" alt="" class="gamesize" id="otome"></a></div>
+        </div>
+        <div class="dekstop3">
+            <h2>Contact</h2>
+            <form action="">
+                    <label for="username">Username</label><br>
+                    <input type="text" id="username" name="username" placeholder="Masukan Nama">
+                    <label for="email">Email</label><br>
+                    <input type="text" id="email" name="email" placeholder="Mauskan Email"><br>
+                    <label for="pesan">Pesan</label>
+                    <textarea name="pesan" id="pesan" placeholder="pesan"></textarea><br>
+                    <button><a href="">Submit</a></button>
+            </form>
+        </div>
     </main>
 </body>
 </html>
