feat:footer anda motto

--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@ Our vision is to be a game development company that positively impacts both ente
                     <button><a href="">Submit</a></button>
             </form>
         </div>
+        <div class="motto">
+            <h1 class="mottotext">"In every pixel there's a <span>story</span>, <br> in every character there's a <span>soul</span> <br> together, let's explore a <span>world</span><br> without limits."</h1>
+        </div>
     </main>
+    <footer>
+        <div class="footer-parents">
+            <div class="footer-child">
+                <h3>Lokasi Perusahaan</h3>
+                <p>JL. Emilia no. 7 <br>
+                blok Sagiri Residence <br>
+            Distrik Konoha, Ciamis city</p>
+            </div>
+            <div class="footer-child">
+                <h3>Kontak</h3>
+                <p>Email shinigami94326@gmail.com <br>
+                No.HP +6281394213560</p>
+            </div>
+            <div class="footer-child">
+                <h3>YAMI CORPORATION</h3>
+                <p>&copy;2025 YAMI CORPORATION. All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
