--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div class="logo"><img src="assets/mymymymy.png" alt=""></div>
         <h1 class="nama-perusahaan"><span>Yami</span> Corporation</h1>
         <ul>
-            <li><a href="" class="info"><span>HOME</span></a></li>
-            <li><a href="" class="info">About</a></li>
-            <li><a href="" class="info">Contact</a></li>
+            <li><a href="#home" class="info"><span>HOME</span></a></li>
+            <li><a href="#about" class="info">About</a></li>
+            <li><a href="#contact" class="info">Contact</a></li>
         </ul>
     </nav>
     <main>
-        <div class="dekstop1">
+        <div class="dekstop1" id="home">
             <div class="deskdesktop"><h1 class="deskperusahaan">
 We are [<span class="redspanshadow">YAMI </span><span class="spanwhite">CORPORATION</span>], a creative startup specializing in modern game development. Driven by innovation and collaboration <br> we focus on delivering fun, immersive, and meaningful gaming experiences for every player. <br>
 Our team consists of young developers, creative designers, and storytellers who believe that games are not just entertainment, but<br> also a medium for learning, expression, and community building. <br>
@@ -25,13 +25,13 @@ We develop games in various genres, from adventure and education to simulation, 
 Our vision is to be a game development company that positively impacts both entertainment and education, while also being able to compete in the global market.</h1>
         </div>
         </div>
-        <div class="desktop2">
+        <div class="desktop2" id="about">
             <h1 class="game-list">GAME LIST</h1>
-            <div class="game"><a href=""><img src="assets/adventure.png" alt="" class="gamesize" id="adventure"></a></div>
-            <div class="game"><a href=""><img src="assets/zombie.png" alt="" class="gamesize" id="zombie"></a></div>
-            <div class="game"><a href=""><img src="assets/otome.png" alt="" class="gamesize" id="otome"></a></div>
+            <div class="game"><a href="projects/project1.html"><img src="assets/adventure.png" alt="" class="gamesize" id="adventure"></a></div>
+            <div class="game"><a href="projects/project2.html"><img src="assets/zombie.png" alt="" class="gamesize" id="zombie"></a></div>
+            <div class="game"><a href="projects/project3.html"><img src="assets/otome.png" alt="" class="gamesize" id="otome"></a></div>
         </div>
-        <div class="dekstop3">
+        <div class="dekstop3" id="contact">
             <h2>Contact</h2>
             <form action="">
                     <label for="username">Username</label><br>
